--- a/style.css
+++ b/style.css
@@ -428,6 +428,33 @@ a {
       padding-bottom: 50px;
 
      }
+
+     .card-1-g, .card-2-g, .card-3-g {
+      border-radius: 25px;
+     }
+
+
+
+     .card-1-g:hover {
+      transform: scale(102%);
+      cursor: pointer;
+      transition: 1s;
+    } 
+
+    .card-2-g:hover {
+      transform: scale(102%);
+      cursor: pointer;
+      transition: 1s;
+    } 
+
+    .card-3-g:hover {
+      transform: scale(102%);
+      cursor: pointer;
+      transition: 1s;
+      
+      
+      
+    } 
   
 
      .card-1-g > img {
@@ -475,17 +502,18 @@ a {
       flex-direction: column;
       width: 480px;
       gap: 17px;
+      
      }
 
      .card-2-g, .card-3-g {
       width: 480px;
       height: 240px;
-      padding-left: 25px;
+      margin-left: 25px;
      }
 
      .card-2-g > h2 {
-      position: absolute;
-      top: 0;
+      position: relative;
+      top: -240px;
       width: 480px;
       padding-left: 18px;
       padding-top: 40px;
@@ -494,8 +522,8 @@ a {
       }
 
       .card-3-g > h2{
-      position: absolute;
-      bottom: 0;
+      position: relative;
+      bottom: 200px;
       width: 230px;
       font-size: 24px;
       font-weight: 500;
@@ -634,17 +662,60 @@ a {
       #separacion {
         width: 80%;
         border-bottom: 1px solid; color: rgb(188, 188, 188);
-        margin-bottom: 50px;
         display: flex;
         margin: auto;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
+      
       }
 
       .nav-footer > div > ul >li:first-child {
         padding-top: 15px;
       }
 
-      
+      @media (max-width: 390px) {
+        .nav-footer {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr 1fr;
+          width: 90%;
+          gap: 10px;
+        }
+      }
+
+      #info {
+        padding-left: 120px;
+        font-size: 12px;
+        font-weight: 300;
+        padding-bottom: 20px;
+        width: 100%;
+      }
+
+      #info > a {
+        color: var(--rtc-tx-blue);
+        text-decoration: underline;
+        
+      }
+
+      aside {
+        width: 100%;
+        padding-bottom: 40px;
+        padding-left: 120px;
+        font-size: 12px;
+        font-weight: 300;
+      }
+
+      @media (max-width: 390px) {
+        aside {
+          padding-left: 20px;
+        }
+
+
+      #info {
+        padding-left: 20px;
+        
+      }
+      }
+
+
 
       
 
